[metadata]
name = fomod-validator
version = 1.5.3
description = Validate your fomod installers.
long_description = file: README.rst
author = Daniel Nunes
author_email = daniel.henri.nunes@gmail.com
url = https://github.com/GandaG/fomod-validator
classifiers =
    ; complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
    Development Status :: 5 - Production/Stable
    Environment :: X11 Applications :: Qt
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities
keywords =
    fomod
    valid
    validator
license = Apache 2.0

[options]
zip_safe = True
py_modules = fomod_validator
install_requires =
    pyfomod>=0.3.0
    PyQt5
    keepitfresh
    path.py

[options.entry_points]
console_scripts = fomod-validator=fomod_validator:main

[options.extras_require]
check = 
    docutils
    collective.checkdocs
    flake8
    readme-renderer
    pygments
    pylint
    isort
build = 
    PyInstaller

[bdist_wheel]
universal = 0

[isort]
not_skip = __init__.py
